tests/literal_expr_unicode_diag_2/expected_err.txt
grammar.peg:1:10: error: Universal character name requires 8 hex digits.
 1 | Root <- '\U14022'
   |          ~~~~~~~
